metadata/objects/Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <formula>Competitor_Product__r.Competitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Customer Feedback #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>